--- a/templates/archive.html
+++ b/templates/archive.html
@@ -3,7 +3,7 @@
 <main class="wp-block-group" style="margin-top:0;padding-top:var(--wp--preset--spacing--small);padding-bottom:var(--wp--preset--spacing--small)">
 	<!-- wp:group {"style":{"spacing":{"margin":{"bottom":"var:preset|spacing|medium"},"blockGap":"10px"}}} -->
 	<div class="wp-block-group" style="margin-bottom:var(--wp--preset--spacing--medium)">
-		<!-- wp:query-title {"type":"archive","showPrefix":false,"fontSize":"large"} /-->
+		<!-- wp:query-title {"type":"archive","showPrefix":false} /-->
 		<!-- wp:term-description /-->
 	</div>
 	<!-- /wp:group -->
