Changes to Posts patterns.

--- a/templates/search.html
+++ b/templates/search.html
@@ -6,7 +6,7 @@
 		<!-- wp:query-title {"type":"search"} /-->
 	</div>
 	<!-- /wp:group -->
-	<!-- wp:pattern {"slug":"powder/query-default"} /-->
+	<!-- wp:pattern {"slug":"powder/posts-default"} /-->
 </main>
 <!-- /wp:group -->
 <!-- wp:template-part {"slug":"footer","tagName":"footer","className":"site-footer"} /-->
