--- a/style.css
+++ b/style.css
@@ -124,7 +124,10 @@ textarea {
 /* -- Navigation -- */
 
 .wp-block-navigation__responsive-container.is-menu-open {
-	padding-bottom: var(--wp--custom--spacing--gap);
+	padding: var(--wp--custom--spacing--gap);
+}
+
+.wp-block-navigation__responsive-container.is-menu-open .wp-block-navigation__responsive-container-content {
 	padding-top: var(--wp--custom--spacing--gap);
 }
 
