--- a/templates/404.html
+++ b/templates/404.html
@@ -3,7 +3,7 @@
 <main class="wp-block-group" style="margin-top:0;padding-top:var(--wp--preset--spacing--x-large);padding-bottom:var(--wp--preset--spacing--x-large)">
 	<!-- wp:group {"layout":{"type":"constrained"}} -->
 	<div class="wp-block-group">
-		<!-- wp:pattern {"slug":"powder/404"} /-->
+		<!-- wp:pattern {"slug":"powder/hidden-404"} /-->
 	</div>
 	<!-- /wp:group -->
 </main>
