--- a/templates/single.html
+++ b/templates/single.html
@@ -4,38 +4,11 @@
 	<!-- wp:group {"layout":{"type":"constrained"},"style":{"spacing":{"blockGap":"10px"}}} -->
 	<div class="wp-block-group">
 		<!-- wp:post-title {"level":1} /-->
-		<!-- wp:group {"layout":{"type":"flex"},"style":{"spacing":{"blockGap":"5px"}},"fontSize":"small"} -->
-		<div class="wp-block-group has-small-font-size">
-			<!-- wp:post-date /-->
-			<!-- wp:paragraph -->
-			<p>·</p>
-			<!-- /wp:paragraph -->
-			<!-- wp:post-author-name {"isLink":true} /-->
-		</div>
-		<!-- /wp:group -->
+		<!-- wp:pattern {"slug":"powder/post-meta"} /-->
 	</div>
 	<!-- /wp:group -->
 	<!-- wp:post-content {"layout":{"type":"constrained"}} /-->
-	<!-- wp:group {"layout":{"type":"constrained"},"style":{"spacing":{"blockGap":"0px"}}} -->
-	<div class="wp-block-group">
-		<!-- wp:group {"layout":{"type":"flex","flexWrap":"nowrap","justifyContent":"left"},"style":{"spacing":{"blockGap":"5px"}}} -->
-		<div class="wp-block-group">
-			<!-- wp:paragraph -->
-			<p>In:</p>
-			<!-- /wp:paragraph -->
-			<!-- wp:post-terms {"term":"category"} /-->
-		</div>
-		<!-- /wp:group -->
-		<!-- wp:group {"layout":{"type":"flex","flexWrap":"nowrap","justifyContent":"left"},"style":{"spacing":{"blockGap":"5px"}}} -->
-		<div class="wp-block-group">
-			<!-- wp:paragraph -->
-			<p>Tags:</p>
-			<!-- /wp:paragraph -->
-			<!-- wp:post-terms {"term":"post_tag"} /-->
-		</div>
-		<!-- /wp:group -->
-	</div>
-	<!-- /wp:group -->
+	<!-- wp:pattern {"slug":"powder/post-terms"} /-->
 	<!-- wp:pattern {"slug":"powder/comments"} /-->
 </main>
 <!-- /wp:group -->
