--- a/templates/page.html
+++ b/templates/page.html
@@ -3,10 +3,10 @@
 <main class="wp-block-group" style="margin-top:0;padding-top:var(--wp--preset--spacing--small);padding-bottom:var(--wp--preset--spacing--small)">
 	<!-- wp:group {"tagName":"article","layout":{"type":"default"}} -->
 	<article class="wp-block-group">
-		<!-- wp:group {"layout":{"type":"constrained"}} -->
-		<div class="wp-block-group">
+		<!-- wp:group {"tagName":"header","className":"entry-header","layout":{"type":"constrained"}} -->
+		<header class="wp-block-group entry-header">
 			<!-- wp:post-title {"level":1} /-->
-		</div>
+		</header>
 		<!-- /wp:group -->
 		<!-- wp:post-content {"layout":{"type":"constrained"}} /-->
 	</article>
