--- a/style.css
+++ b/style.css
@@ -149,6 +149,14 @@ textarea {
 /* Blocks
 ---------------------------------------- */
 
+/* -- Cover -- */
+
+.wp-block-cover.is-style-gradient .has-background-dim:not([class*=-background-color]) {
+	background-color: transparent;
+	background-image: linear-gradient(to top, rgba(10,10,10,0.6), rgba(10,10,10,1));
+	opacity: 1;
+}
+
 /* -- Navigation -- */
 
 .wp-block-navigation__responsive-container.is-menu-open {
