--- a/templates/page-with-sidebar.html
+++ b/templates/page-with-sidebar.html
@@ -1,19 +1,23 @@
 <!-- wp:template-part {"slug":"header","tagName":"header","className":"site-header"} /-->
-<!-- wp:group {"tagName":"main","style":{"spacing":{"margin":{"top":"0"},"padding":{"top":"var:preset|spacing|small","bottom":"var:preset|spacing|small"}}},"layout":{"type":"constrained","wideSize":"1080px"}} -->
-<main class="wp-block-group" style="margin-top:0;padding-top:var(--wp--preset--spacing--small);padding-bottom:var(--wp--preset--spacing--small)">
+<!-- wp:group {"style":{"spacing":{"margin":{"top":"0"},"padding":{"top":"var:preset|spacing|small","bottom":"var:preset|spacing|small"}}},"layout":{"type":"constrained","wideSize":"1080px"}} -->
+<div class="wp-block-group" style="margin-top:0;padding-top:var(--wp--preset--spacing--small);padding-bottom:var(--wp--preset--spacing--small)">
 	<!-- wp:columns {"style":{"spacing":{"blockGap":{"left":"var:preset|spacing|large"}}}} -->
 	<div class="wp-block-columns">
 		<!-- wp:column {"width":"64%"} -->
 		<div class="wp-block-column" style="flex-basis:64%">
+			<!-- wp:group {"tagName":"main","layout":{"type":"constrained"}} -->
+			<main class="wp-block-group">
 			<!-- wp:group {"tagName":"article","layout":{"type":"default"}} -->
-			<article class="wp-block-group">
-				<!-- wp:group {"tagName":"header","className":"entry-header","layout":{"type":"constrained"}} -->
-				<header class="wp-block-group entry-header">
-					<!-- wp:post-title {"level":1} /-->
-				</header>
+				<article class="wp-block-group">
+					<!-- wp:group {"tagName":"header","className":"entry-header","layout":{"type":"constrained"}} -->
+					<header class="wp-block-group entry-header">
+						<!-- wp:post-title {"level":1} /-->
+					</header>
+					<!-- /wp:group -->
+					<!-- wp:post-content {"layout":{"type":"constrained"}} /-->
+				</article>
 				<!-- /wp:group -->
-				<!-- wp:post-content {"layout":{"type":"constrained"}} /-->
-			</article>
+			</main>
 			<!-- /wp:group -->
 		</div>
 		<!-- /wp:column -->
@@ -24,6 +28,6 @@
 		<!-- /wp:column -->
 	</div>
 	<!-- /wp:columns -->
-</main>
+</div>
 <!-- /wp:group -->
 <!-- wp:template-part {"slug":"footer","tagName":"footer","className":"site-footer"} /-->
