Trim Posts pattern slug.

--- a/templates/archive.html
+++ b/templates/archive.html
@@ -7,7 +7,7 @@
 		<!-- wp:term-description /-->
 	</div>
 	<!-- /wp:group -->
-	<!-- wp:pattern {"slug":"powder/posts-default"} /-->
+	<!-- wp:pattern {"slug":"powder/posts"} /-->
 </main>
 <!-- /wp:group -->
 <!-- wp:template-part {"slug":"footer","tagName":"footer","className":"site-footer"} /-->
