--- a/style.css
+++ b/style.css
@@ -159,10 +159,14 @@ textarea {
 	box-shadow: var(--wp--preset--shadow--solid);
 }
 
-/* -- Filter -- */
+/* -- Position -- */
 
-.is-style-filter-invert {
-	filter: invert(1);
+.is-style-position-fixed {
+	position: fixed;
+}
+
+.is-style-position-relative {
+	position: relative;
 }
 
 /* Effects
@@ -196,6 +200,16 @@ textarea {
 
 	.wp-block-columns.is-style-column-reverse {
 		flex-direction: column-reverse;
+	}
+
+}
+
+@media only screen and (min-width: 600px) {
+
+	/* -- Utility -- */
+
+	.is-style-pull-200 {
+		margin-top: -200px !important;
 	}
 
 }
