Update theme description.

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ Theme Name: Powder
 Theme URI: https://powderstudio.com/
 Author: Brian Gardner
 Author URI: https://briangardner.com/
-Description: With Powder, our mission is to revolutionize how beautiful WordPress websites are made by embracing the power and flexibility of block-based design. Our approach—inspired by the brilliant color palettes of Tailwind CSS—transcends conventional standards and provides an innovative, engaging, and imaginative canvas where creativity knows no bounds.
+Description: At the heart of Powder lies an expansive vision for block-based design. Inspired by the radiant color palettes of Tailwind CSS, it transcends conventional standards and provides an innovative canvas where imagination runs wild. With its extensive library of wireframe block patterns, style variations, and versatile templates, Powder transforms the art of creating intoxicating WordPress websites.
 Requires at least: 6.4
 Tested up to: 6.4
 Requires PHP: 7.0
