Add back Cover block style.

--- a/style.css
+++ b/style.css
@@ -96,6 +96,14 @@ textarea {
 /* Blocks
 ---------------------------------------- */
 
+/* -- Cover -- */
+
+.wp-block-cover.is-style-gradient .has-background-dim:not([class*=-background-color]) {
+	background-color: transparent;
+	background-image: linear-gradient(to top, rgba(0,0,0,0.6), rgba(0,0,0,1));
+	opacity: 1;
+}
+
 /* -- Navigation -- */
 
 .wp-block-navigation__responsive-container.is-menu-open {
