--- a/style.css
+++ b/style.css
@@ -8,8 +8,8 @@ Requires at least: 6.4
 Tested up to: 6.4
 Requires PHP: 7.0
 Version: 0.9.8
-License: GNU General Public License v2 or later
-License URI: https://www.gnu.org/licenses/gpl-2.0.html
+License: GNU General Public License v3
+License URI: https://www.gnu.org/licenses/gpl-3.0.html
 Text Domain: powder
 Tags: block-patterns, block-styles, custom-colors, custom-logo, custom-menu, editor-style, full-site-editing, one-column, style-variations, template-editing, translation-ready, two-columns, wide-blocks
 */
