Tweak theme description.

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ Theme Name: Powder
 Theme URI: https://powderstudio.com/
 Author: Brian Gardner
 Author URI: https://briangardner.com/
-Description: Powder elegantly revisits its minimalist roots, embodying a refined simplicity. Perfectly suited for personal projects, enhanced by child themes, or as a robust base for client work, Powder offers a modern canvas for WordPress design.
+Description: Powder elegantly revisits its minimalist roots, embodying a natural simplicity. Perfectly suited for personal projects, enhanced by child themes, or as a robust base for client work, Powder offers a modern canvas for WordPress design.
 Requires at least: 6.4
 Tested up to: 6.4
 Requires PHP: 7.0
