--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ Version: 0.9.8
 License: GNU General Public License v3
 License URI: https://www.gnu.org/licenses/gpl-3.0.html
 Text Domain: powder
-Tags: block-patterns, block-styles, custom-colors, custom-logo, custom-menu, editor-style, full-site-editing, one-column, style-variations, template-editing, translation-ready, two-columns, wide-blocks
+Tags: block-patterns, block-styles, custom-colors, custom-logo, custom-menu, editor-style, full-site-editing, one-column, template-editing, translation-ready, wide-blocks
 */
 
 
