--- a/assets/css/blocks/button.css
+++ b/assets/css/blocks/button.css
@@ -17,14 +17,14 @@
     background-color: currentcolor;
     content: '';
     display: inline-block;
-    height: 16px;
+    height: 1rem;
     mask-image: url( '../../images/icon-circle-right.svg' );
     mask-size: contain;
-    left: 10%;
+    margin-left: 0.5rem;
     position: relative;
     top: -1px;
     vertical-align: middle;
-    width: 16px;
+    width: 1rem;
 }
 
 .is-style-minimal.is-style-minimal.wp-block-button .wp-block-button__link,
@@ -44,3 +44,32 @@
 .is-style-text.is-style-text.wp-block-button .wp-block-button__link:hover {
 	color: var(--wp--preset--color--primary-700);
 }
+
+.medium.medium.wp-block-button .wp-block-button__link {
+	padding: 0.625rem 1.125rem;
+}
+
+.large.large.wp-block-button .wp-block-button__link {
+	padding: 0.75rem 1rem;
+	border-radius: 0.375rem;
+	border-size: 0.125rem;
+	font-size: 1rem;
+}
+
+.large.large.wp-block-button .wp-block-button__link::after {
+	height: 1.25rem;
+	width: 1.25rem;
+}
+
+.xlarge.xlarge.wp-block-button .wp-block-button__link {
+	padding: 1rem 1.5rem;
+	border-radius: 0.375rem;
+	border-size: 0.125rem;
+	font-size: 1.125rem;
+}
+
+.xlarge.xlarge.wp-block-button .wp-block-button__link::after {
+	height: 1.5rem;
+	width: 1.5rem;
+}
+
