--- a/style.css
+++ b/style.css
@@ -14,181 +14,4 @@ Text Domain: powder
 Tags: block-patterns, block-styles, custom-colors, custom-logo, custom-menu, editor-style, full-site-editing, one-column, style-variations, template-editing, translation-ready, two-columns, wide-blocks
 */
 
-
-/* Defaults
----------------------------------------- */
-
-*,
-*::before,
-*::after {
-	box-sizing: border-box;
-}
-
-html {
-	scroll-behavior: smooth;
-}
-
-a,
-button,
-input,
-textarea,
-.wp-element-button {
-	transition: all 0.2s ease-in-out;
-}
-
-a,
-a:focus,
-a:hover,
-a:not(.wp-element-button) {
-	text-decoration-thickness: 0.063rem;
-}
-
-b,
-strong,
-th {
-	font-weight: var(--wp--custom--font-weight--medium);
-}
-
-/* -- Forms -- */
-
-input,
-select,
-textarea {
-	background-color: var(--wp--preset--color--white);
-	border: 0.063rem solid var(--wp--preset--color--primary-500);
-	border-radius: 0;
-	color: var(--wp--preset--color--primary-500);
-	font-family: var(--wp--preset--font-family--outfit);
-	font-size: var(--wp--preset--font-size--medium);
-	font-weight: var(--wp--custom--font-weight--light);
-	line-height: var(--wp--custom--line-height--body);
-	padding: 0.625rem 1.25rem;
-	width: 100%;
-}
-
-input:focus,
-textarea:focus {
-	filter: brightness(95%);
-	outline: none;
-}
-
-input[type="checkbox"],
-input[type="image"],
-input[type="radio"] {
-	width: auto;
-}
-
-input[type="button"],
-input[type="email"],
-input[type="search"],
-input[type="submit"],
-input[type="text"],
-textarea {
-	-webkit-appearance: none;
-}
-
-::placeholder {
-	color: var(--wp--preset--color--primary-500);
-	font-size: var(--wp--preset--font-size--small);
-	opacity: 0.5;
-}
-
-/* Blocks
----------------------------------------- */
-
-/* -- Cover -- */
-
-.wp-block-cover.is-style-gradient .has-background-dim:not([class*=-background-color]) {
-	background-color: transparent;
-	background-image: linear-gradient(to top, rgba(0,0,0,0.6), rgba(0,0,0,1));
-	opacity: 1;
-}
-
-
-
-/* Search
----------------------------------------- */
-
-.wp-block-search.wp-block-search__button-only .wp-block-search__button {
-	max-width: inherit;
-}
-
-/* Utility
----------------------------------------- */
-
-/* -- Box Shadow -- */
-
-.is-style-shadow-light {
-	box-shadow: var(--wp--preset--shadow--light);
-}
-
-.is-style-shadow-solid {
-	box-shadow: var(--wp--preset--shadow--solid);
-}
-
-/* -- Filter -- */
-
-.is-style-filter-invert {
-	filter: invert(1);
-}
-
-/* -- Position -- */
-
-.is-style-position-fixed {
-	position: fixed;
-}
-
-.is-style-position-relative {
-	position: relative;
-}
-
-/* -- Pull -- */
-
-.is-style-pull-100 {
-	margin-top: -6.25rem !important;
-}
-
-/* -- Z-Index -- */
-
-.is-style-negative-zindex {
-	z-index: -99;
-}
-
-.is-style-positive-zindex {
-	z-index: 99;
-}
-
-/* Effects
----------------------------------------- */
-
-/* -- Header -- */
-
-.js-enabled .site-header {
-	position: sticky;
-	top: 0;
-	transition: top 0.5s;
-	z-index: 100;
-}
-
-/* Media Queries
----------------------------------------- */
-
-@media only screen and (max-width: 600px) {
-
-	/* -- Utility -- */
-
-	.is-style-hidden-mobile {
-		display: none !important;
-	}
-
-}
-
-@media only screen and (max-width: 782px) {
-
-	/* -- Columns -- */
-
-	.wp-block-columns.is-style-column-reverse {
-		flex-direction: column-reverse;
-	}
-
-}
+@import './assets/css/global/index.css';
