--- a/assets/css/blocks/core/button.css
+++ b/assets/css/blocks/core/button.css
@@ -12,7 +12,7 @@
     content: '';
     display: inline-block;
     height: 1rem;
-    mask-image: url( '../../images/icon-circle-right.svg' );
+    mask-image: url( '../../../images/icon-circle-right.svg' );
     mask-size: contain;
     margin-left: 0.5rem;
     position: relative;
