--- a/assets/css/blocks/core/cover.css
+++ b/assets/css/blocks/core/cover.css
@@ -1,7 +1,8 @@
 /* -- Cover -- */
 
-.wp-block-cover.is-style-gradient .has-background-dim:not([class*=-background-color]) {
+.wp-block-cover.is-style-gradient
+.has-background-dim:not([class*="-background-color"]) {
 	background-color: transparent;
-	background-image: linear-gradient(to top, rgba(0,0,0,0.6), rgba(0,0,0,1));
+	background-image: linear-gradient(to top, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 1));
 	opacity: 1;
 }
