--- a/assets/css/blocks/core/navigation.css
+++ b/assets/css/blocks/core/navigation.css
@@ -4,45 +4,54 @@
 	padding: var(--wp--custom--spacing--gap);
 }
 
-.wp-block-navigation__responsive-container.is-menu-open .wp-block-navigation__responsive-container-content {
+.wp-block-navigation__responsive-container.is-menu-open
+.wp-block-navigation__responsive-container-content {
 	padding-top: var(--wp--custom--spacing--gap);
 }
 
 .wp-block-navigation__responsive-container-close,
 .wp-block-navigation__responsive-container-open {
-	border: 0.063rem solid currentColor;
+	border: 0.063rem solid currentcolor;
 	padding: 0.125rem;
 }
 
 /* -- Navigation Submenu -- */
 
-.wp-block-navigation:not(.has-background) .wp-block-navigation__responsive-container.is-menu-open,
-.wp-block-navigation:not(.has-background) .wp-block-navigation__submenu-container {
-	background-color: var(--wp--preset--color--white);
-	color: var(--wp--preset--color--primary-500);
-}
-
-.has-contrast-background-color .wp-block-navigation .wp-block-navigation__responsive-container.is-menu-open,
+.has-contrast-background-color
+.wp-block-navigation
+.wp-block-navigation__responsive-container.is-menu-open,
 .has-contrast-background-color .wp-block-navigation__submenu-container {
 	background-color: var(--wp--preset--color--primary-500);
 	color: var(--wp--preset--color--white);
-}
-
-.wp-block-navigation:not(.has-background) .wp-block-navigation__submenu-container {
-	border-color: var(--wp--preset--color--primary-500);
-	min-width: 180px !important;
-	padding: 0.625rem;
 }
 
 .has-contrast-background-color .wp-block-navigation__submenu-container {
 	border-color: var(--wp--preset--color--white);
 }
 
-.wp-block-navigation :where(.wp-block-navigation__submenu-container) .wp-block-navigation-item__content {
+.wp-block-navigation:not(.has-background)
+.wp-block-navigation__responsive-container.is-menu-open,
+.wp-block-navigation:not(.has-background)
+.wp-block-navigation__submenu-container {
+	background-color: var(--wp--preset--color--white);
+	color: var(--wp--preset--color--primary-500);
+}
+
+.wp-block-navigation:not(.has-background)
+.wp-block-navigation__submenu-container {
+	border-color: var(--wp--preset--color--primary-500);
+	min-width: 180px !important;
+	padding: 0.625rem;
+}
+
+.wp-block-navigation
+:where(.wp-block-navigation__submenu-container)
+.wp-block-navigation-item__content {
 	padding: 0.125rem 0.625rem;
 }
 
-.wp-block-navigation__responsive-container.is-menu-open .wp-block-navigation__submenu-container {
+.wp-block-navigation__responsive-container.is-menu-open
+.wp-block-navigation__submenu-container {
 	padding-left: 0.625rem !important;
 	padding-right: 0.625rem !important;
 	padding-top: 0.313rem !important;
