--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,5 +1,5 @@
 /* -- Global site styles -- */
 
-@import 'global/global.css';
-@import 'global/forms.css';
-@import 'global/utility.css';
+@import "global/global.css";
+@import "global/forms.css";
+@import "global/utility.css";
