Search and Replace Powder with WDS BT

--- a/style.css
+++ b/style.css
@@ -1,16 +1,16 @@
 /*
-Theme Name: Powder
-Theme URI: https://powderstudio.com/
-Author: Brian Gardner
-Author URI: https://briangardner.com/
-Description: Powder reclaims its minimalist roots by embodying a sense of real simplicity. Tailor-made for personal projects, extended by child themes, or utilized as the foundation for clients, Powder offers a modern canvas for WordPress design.
+Theme Name: WDS BT
+Theme URI: https://webdevstudios.com/
+Author: WebDevStudios
+Author URI: https://webdevstudios.com/
+Description: Introducing WDS BT, a sleek block theme inspired by the Powder Theme. Designed as a versatile base theme, it offers a modern layout, user-friendly interface, and seamless integration with the WordPress block editor. Elevate your website effortlessly with WDS BT, where design meets functionality in a compact package.
 Requires at least: 6.4
 Tested up to: 6.4
 Requires PHP: 7.0
 Version: 0.9.10
 License: GNU General Public License v3
 License URI: https://www.gnu.org/licenses/gpl-3.0.html
-Text Domain: powder
+Text Domain: wdsbt
 Tags: block-patterns, block-styles, custom-colors, custom-logo, custom-menu, e-commerce, editor-style, full-site-editing, one-column, style-variations, translation-ready, wide-blocks
 */
 
