--- a/templates/single.html
+++ b/templates/single.html
@@ -1,19 +1,26 @@
 <!-- wp:template-part {"slug":"header","tagName":"header","className":"site-header"} /-->
 <!-- wp:group {"tagName":"main","style":{"spacing":{"margin":{"top":"0"},"padding":{"top":"var:preset|spacing|small","bottom":"var:preset|spacing|small"}}}} -->
-<main class="wp-block-group" style="margin-top:0;padding-top:var(--wp--preset--spacing--small);padding-bottom:var(--wp--preset--spacing--small)">
-	<!-- wp:group {"tagName":"article","layout":{"type":"default"}} -->
-	<article class="wp-block-group">
-		<!-- wp:group {"tagName":"header","style":{"spacing":{"blockGap":"10px"}},"className":"entry-header","layout":{"type":"constrained"}} -->
-		<header class="wp-block-group entry-header">
-			<!-- wp:post-title {"level":1} /-->
-			<!-- wp:pattern {"slug":"powder/post-meta"} /-->
-		</header>
-		<!-- /wp:group -->
-		<!-- wp:post-content {"layout":{"type":"constrained"}} /-->
-		<!-- wp:pattern {"slug":"powder/post-terms"} /-->
-		<!-- wp:pattern {"slug":"powder/comments"} /-->
-	</article>
-	<!-- /wp:group -->
+<main
+  class="wp-block-group"
+  style="
+    margin-top: 0;
+    padding-top: var(--wp--preset--spacing--small);
+    padding-bottom: var(--wp--preset--spacing--small);
+  "
+>
+  <!-- wp:group {"tagName":"article","layout":{"type":"default"}} -->
+  <article class="wp-block-group">
+    <!-- wp:group {"tagName":"header","style":{"spacing":{"blockGap":"10px"}},"className":"entry-header","layout":{"type":"constrained"}} -->
+    <header class="wp-block-group entry-header">
+      <!-- wp:post-title {"level":1} /-->
+      <!-- wp:pattern {"slug":"wdsbt/post-meta"} /-->
+    </header>
+    <!-- /wp:group -->
+    <!-- wp:post-content {"layout":{"type":"constrained"}} /-->
+    <!-- wp:pattern {"slug":"wdsbt/post-terms"} /-->
+    <!-- wp:pattern {"slug":"wdsbt/comments"} /-->
+  </article>
+  <!-- /wp:group -->
 </main>
 <!-- /wp:group -->
 <!-- wp:template-part {"slug":"footer","tagName":"footer","className":"site-footer"} /-->
