--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ Theme Name: Powder
 Theme URI: https://powderstudio.com/
 Author: Brian Gardner
 Author URI: https://briangardner.com/
-Description: Powder reclaims its minimalist roots by embodying a sense of real simplicity. Tailor-made for personal projects, extended by child themes, or utilized as the foundation for clients, Powder offers a modern canvas for WordPress design.
+Description: Powder embraces the limitless potential of block-based design with WordPress. Its signature approach—inspired by the brilliant color palettes of Tailwind CSS—transcends conventional standards and provides a canvas where creativity knows no bounds. With its extensive library of wireframe patterns, style variations, and versatile templates, Powder transforms the development of WordPress websites, setting a new standard of artistic freedom within the open-source community.
 Requires at least: 6.4
 Tested up to: 6.4
 Requires PHP: 7.0
